; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_pg_shdepend.c_deleteSharedDependencyRecordsFor.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_pg_shdepend.c_deleteSharedDependencyRecordsFor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SharedDependRelationId = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@SHARED_DEPENDENCY_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @deleteSharedDependencyRecordsFor(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* @SharedDependRelationId, align 4
  %9 = load i32, i32* @RowExclusiveLock, align 4
  %10 = call i32 @table_open(i32 %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp eq i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = load i32, i32* @InvalidOid, align 4
  %19 = load i32, i32* @InvalidOid, align 4
  %20 = load i32, i32* @SHARED_DEPENDENCY_INVALID, align 4
  %21 = call i32 @shdepDropDependency(i32 %11, i32 %12, i32 %13, i64 %14, i32 %17, i32 %18, i32 %19, i32 %20)
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @RowExclusiveLock, align 4
  %24 = call i32 @table_close(i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @table_open(i32, i32) #1

declare dso_local i32 @shdepDropDependency(i32, i32, i32, i64, i32, i32, i32, i32) #1

declare dso_local i32 @table_close(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
